adiciona um trecho de script

--- a/index.html
+++ b/index.html
@@ -19,5 +19,20 @@
         &copy; José Miguel - 2023
     </footer>
     
+    <script>
+        console.log('Hello World!');
+        let pessoa;
+        pessoa = {
+            id : 1,
+            nome : 'Fulano',
+            idade: 15,
+            envelhecer : function() {
+                this.name++;
+            }
+        };
+        
+        console.log(pessoa);
+    </script>
+
 </body>
 </html>
