faz chamada para metodo

--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
             nome : 'Fulano',
             idade: 15,
             envelhecer : function() {
-                this.name++;
+                this.idade++;
             }
         };
-        
+        pessoa.envelhecer();
         console.log(pessoa);
     </script>
 
